--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             <div class="works_btn_area">
                 <div class="works_btn_bar"><span>網頁類型</span><i class="fa fa-sort-desc"></i></div>
                 <div class="works_btn_container">
-                    <div class="works_btn works_btn_active"><a href="#tab1">官網類型</a></div>
+                    <div class="works_btn works_btn_active"><a href="#tab1">官網類型<span style="color:#ef3e3e;font-size:16px;">(推)</span></a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
-                    <div class="works_btn"><a href="#tab3">APP設計</a></div>
+                    <div class="works_btn"><a href="#tab3">APP設計<span style="color:#ef3e3e;font-size:16px;">(推)</span></a></div>
                     <div class="works_btn"><a href="#tab4">後台介面</a></div>
                     <div class="works_btn"><a href="#tab5">PS繪圖</a></div>
                     <div class="works_btn"><a href="#tab6">UX知識</a></div>
@@ -186,7 +186,6 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t1_2" src="image/w10s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
                                     <span>元大期貨官網提案</span>
@@ -204,7 +203,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案</span>
+                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺設計和jquery動態應用</span>
                                 </div>
                             </div>
                         </a>
@@ -241,7 +240,6 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t2_2" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
                                     <span>一頁式宣傳網頁</span>
