--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物投保流程</span></div>
+                            <div class="works_item_bar"><span>泰安產物投保流程</span><br/><span style="font-size:14px;">UI物件運用和規劃流程</span></div>
                         </div>
                     </div>
 
@@ -294,7 +294,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品設計思維</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品發想設計思維</span></div>
                             </div>
                         </a>
                     </div>
