--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <div class="works_item_bar">
                                     <span>永豐網路投保</span>
                                     <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
-                                    <span style="font-size:14px;">UI library、RWD mockup、Prototype</span>
+                                    <span style="font-size:14px;">製作UI library、RWD mockup、Prototype</span>
                                 </div>
                             </div>
                         </a>
@@ -190,7 +190,7 @@
                                 <div class="works_item_bar">
                                     <span>元大期貨官網提案</span>
                                     <span style="font-size:14px;color:#ffd452;">(得標)</span><br />
-                                    <span style="font-size:14px;">視覺設計和jquery動態應用</span>
+                                    <span style="font-size:14px;">視覺和jquery應用</span>
                                 </div>
                             </div>
                         </a>
@@ -203,7 +203,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺設計和jquery動態應用</span>
+                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺和jquery應用</span>
                                 </div>
                             </div>
                         </a>
@@ -294,7 +294,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品發想設計思維</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品發想思維</span></div>
                             </div>
                         </a>
                     </div>
@@ -434,7 +434,7 @@
     <div class="pup_container_2" style="display:none;">
         <div class="pup_bg"></div>
         <div class="pup_img_container">
-            <img src="work_image/p17-1.png" style="display:none;" alt="" />
+            <img src="work_image/p17-1.png" alt="" />
             <img src="work_image/p17-2.png" style="display:none;" alt="" />
             <img src="work_image/p17-3.png" style="display:none;" alt="" />
             <img src="work_image/p17-4.png" style="display:none;" alt="" />
