--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>永豐網路投保</span>
-                                    <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
-                                    <span style="font-size:14px;">製作UI library、RWD mockup、Prototype</span>
+                                    <span style="font-size:14px;">(外連figma)</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">製作UI library、RWD mockup、Prototype</span>
                                 </div>
                             </div>
                         </a>
@@ -270,8 +270,8 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>銀行APP redesign</span>
-                                    <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
-                                    <span style="font-size:14px;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
+                                    <span style="font-size:14px;">(外連figma)</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
                                 </div>
                             </div>
                         </a>
@@ -283,7 +283,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP</span><br/><span style="font-size:14px;">介面UX思維</span></div>
+                                <div class="works_item_bar"><span>股票APP</span><br/><span style="font-size:14px;color:#ffd452;">介面UX思維</span></div>
                             </div>
                         </a>
                     </div>
@@ -294,7 +294,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品發想思維</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;color:#ffd452;">產品發想思維</span></div>
                             </div>
                         </a>
                     </div>
@@ -403,7 +403,6 @@
                         </a>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="works_area_tip"></div>
