--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <div class="works_btn_area">
                 <div class="works_btn_bar"><span>網頁類型</span><i class="fa fa-sort-desc"></i></div>
                 <div class="works_btn_container">
-                    <div class="works_btn works_btn_active"><a href="#tab1">官網類型<span style="color:#ef3e3e;font-size:16px;">推薦</span></a></div>
-                    <div class="works_btn"><a href="#tab2">行銷類型</a></div>
+                    <div class="works_btn works_btn_active"><a href="#tab1">官網類<span style="color:#ef3e3e;font-size:16px;">推薦</span></a></div>
+                    <div class="works_btn"><a href="#tab2">行銷類</a></div>
                     <div class="works_btn"><a href="#tab3">APP設計<span style="color:#ef3e3e;font-size:16px;">推薦</span></a></div>
                     <div class="works_btn"><a href="#tab4">後台介面</a></div>
                     <div class="works_btn"><a href="#tab5">PS繪圖</a></div>
