--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 <div class="works_item_bar">
                                     <span>元大期貨官網提案</span>
                                     <span style="font-size:14px;color:#ffd452;">(得標)</span><br />
-                                    <span style="font-size:14px;">視覺和jquery應用</span>
+                                    <span style="font-size:14px;">視覺和動畫應用</span>
                                 </div>
                             </div>
                         </a>
@@ -203,7 +203,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺和jquery應用</span>
+                                    <span>元大期貨官網提案</span><br /><span style="font-size:14px;">視覺和動畫應用</span>
                                 </div>
                             </div>
                         </a>
@@ -213,7 +213,7 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物投保流程</span><br/><span style="font-size:14px;">UI物件運用和規劃流程</span></div>
+                            <div class="works_item_bar"><span>泰安產物投保流程</span><br/><span style="font-size:14px;">UI物件和流程規劃</span></div>
                         </div>
                     </div>
 
