--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span style="color:#ffd452;">至今已有9年經驗，能依客戶想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span style="color:#ef3e3e;">至今已有9年經驗，能依客戶想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span style="color:#ffd452;">至今已有9年經驗，能依客戶想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span style="color:#ef3e3e;">至今已有9年經驗，能依客戶想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
