--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求規劃流程並轉化視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
+                    使用Figma、Photoshop、illustrator繪圖軟體，製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator繪圖軟體，製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
             </div>
         </div>
 
