--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="top_bar_area">
         <div class="top_bar_container">
             <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>歡迎您的拜訪:)</div>
-            <div class="top_bar_logo"><img src="image/logo.jpg" alt="joe's works" /></div>
+            <div class="top_bar_logo"><img src="image/logo.png" alt="joe's works" /></div>
             <div class="top_bar_text top_bar_right"><i class="fa fa-desktop"></i><i class="fa fa-tablet"></i>網頁為響應式建置</div>
         </div>
     </div>
@@ -123,19 +123,19 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，至今已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
+                    在網頁、UI設計工作已有9年經驗，<span style="color:#ef3e3e;font-weight:bold;">能將想法需求轉化流程視覺圖，實作技能熟練，配色排版把握度高</span>，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator繪圖軟體，製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                    使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，靈活<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用Figma、Photoshop、illustrator繪圖軟體，製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator製作官方網站、活動網頁、APP、系統後台...等視覺設計，<span style="color:#ef3e3e;font-weight:bold;">熟悉RWD網頁建置技術，在規畫時能掌握可行度</span>。懂IOS和google設計規範，<span style="color:#ef3e3e;font-weight:bold;">運用介面元件和使用者體驗知識，進行設計和規畫流程並製作設計規範。</span>
             </div>
         </div>
 
@@ -155,12 +155,10 @@
             <div class="works_btn_area">
                 <div class="works_btn_bar"><span>官網類</span><i class="fa fa-sort-desc"></i></div>
                 <div class="works_btn_container">
-                    <div class="works_btn works_btn_active"><a href="#tab1">官網類<span style="color:#ef3e3e;font-size:16px;">推薦</span></a></div>
-                    <div class="works_btn"><a href="#tab2">行銷類</a></div>
-                    <div class="works_btn"><a href="#tab3">APP設計<span style="color:#ef3e3e;font-size:16px;">推薦</span></a></div>
-                    <div class="works_btn"><a href="#tab4">後台介面</a></div>
-                    <div class="works_btn"><a href="#tab5">PS繪圖</a></div>
-                    <div class="works_btn"><a href="#tab6">UX知識</a></div>
+                    <div class="works_btn works_btn_active"><a href="#tab1">官網類</a></div>
+                    <div class="works_btn"><a href="#tab2"></a>APP&amp;後台</div>
+                    <div class="works_btn"><a href="#tab3">行銷類</a></div>
+                    <div class="works_btn"><a href="#tab4">PS繪圖</a></div>
                 </div>
             </div>
             <div>
@@ -174,9 +172,8 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>永豐網路投保</span>
-                                    <span style="font-size:14px;">(外連figma)</span><br />
-                                    <span style="font-size:14px;color:#ffd452;">製作UI library、RWD mockup、Prototype</span>
+                                    <span>永豐網路投保</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">UI library、RWD mockup、Prototype</span>
                                 </div>
                             </div>
                         </a>
@@ -195,7 +192,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="works_item_container">
                         <a href="website/yuanta_cfd/index_2.html" target="_blank" role="button">
                             <div class="works_item">
@@ -213,17 +209,64 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物投保流程</span><br/><span style="font-size:14px;">UI物件和流程規劃</span></div>
+                            <div class="works_item_bar"><span>泰安產物投保流程</span><br /><span style="font-size:14px;">UI物件和流程規劃</span></div>
                         </div>
                     </div>
-
                 </div>
 
                 <div id="tab2" class="works_item_area">
                     <div class="works_item_container">
+                        <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=535-5508&mode=design&t=P8lx23V7IwR8tjrD-0" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t2_1" src="image/a5s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
+                                </div>
+                                <div class="works_item_bar">
+                                    <span>銀行APP redesign</span>
+                                    <span style="font-size:14px;">(外連figma)</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/money_mine_page/page_ui.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t2_2" src="image/a1-2s.png" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
+                                </div>
+                                <div class="works_item_bar"><span>股票APP</span><br /><span style="font-size:14px;color:#ffd452;">UI設計UX應用</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/funtogo2021/page.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t2_3" src="image/a2s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
+                                </div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br /><span style="font-size:14px;color:#ffd452;">產品發想思維</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="s10" class="works_item item_show_pic_3">
+                            <div class="works_item_pic"><img id="t2_4" src="image/y1s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>後台介面設計</span></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="tab3" class="works_item_area">
+                    <div class="works_item_container">
                         <a href="website/travel_activity/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t2_1" src="image/w12s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t3_1" src="image/w12s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
@@ -238,7 +281,7 @@
                     <div class="works_item_container">
                         <a href="website/istudy_page/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t2_2" src="image/w8s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t32_2" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
@@ -251,75 +294,15 @@
                     </div>
                     <div class="works_item_container">
                         <div id="p12" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t2_3" src="image/p12s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_3" src="image/p12s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>Suzuki商品專頁</span></div>
                         </div>
                     </div>
-
                 </div>
 
-                <div id="tab3" class="works_item_area">
-                    <div class="works_item_container">
-                        <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=535-5508&mode=design&t=P8lx23V7IwR8tjrD-0" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t3_1" src="image/a5s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
-                                </div>
-                                <div class="works_item_bar">
-                                    <span>銀行APP redesign</span>
-                                    <span style="font-size:14px;">(外連figma)</span><br />
-                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container">
-                        <a href="website/money_mine_page/page.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t3_2" src="image/a1-2s.png" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
-                                </div>
-                                <div class="works_item_bar"><span>股票APP</span><br/><span style="font-size:14px;color:#ffd452;">介面UX思維</span></div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container">
-                        <a href="website/funtogo2021/page.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t3_3" src="image/a2s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                    <div class="works_item_note"><span>推薦</span></div>
-                                </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;color:#ffd452;">產品發想思維</span></div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container">
-                        <div id="" class="works_item item_show_pic_4">
-                            <div class="works_item_pic"><img id="t3_4" src="image/a5s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>APP物件動態模擬</span></div>
-                        </div>
-                    </div>
-                </div>
-                
                 <div id="tab4" class="works_item_area">
-                    <div class="works_item_container">
-                        <div id="s10" class="works_item item_show_pic_3">
-                            <div class="works_item_pic"><img id="t5_1" src="image/y1s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>後台介面設計</span></div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div id="tab5" class="works_item_area">
                     <div class="works_item_container">
                         <div id="s1" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t4_1" src="image/s1s.jpg" alt="" />
@@ -434,14 +417,15 @@
         <div class="pup_bg"></div>
         <div class="pup_img_container">
             <img src="work_image/p17-1.png" alt="" />
-            <img src="work_image/p17-2.png" style="display:none;" alt="" />
-            <img src="work_image/p17-3.png" style="display:none;" alt="" />
-            <img src="work_image/p17-4.png" style="display:none;" alt="" />
+            <img src="work_image/p17-2.png" alt="" />
+            <img src="work_image/p17-3.png" alt="" />
+            <img src="work_image/p17-4.png" alt="" />
             <img src="work_image/p17-5.png" alt="" />
             <img src="work_image/p17-6.png" alt="" />
             <img src="work_image/p17-7.png" alt="" />
             <img src="work_image/p17-8.png" alt="" />
             <img src="work_image/p17-9.png" alt="" />
+            <img src="work_image/p17-10.png" alt="" />
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
